start moving char images to textures

--- a/build.settings
+++ b/build.settings
@@ -36,6 +36,12 @@ settings =
 			UILaunchStoryboardName = "LaunchScreen",
 		},
 	},
+	window = 
+	{
+
+        defaultViewWidth = 1920,
+        defaultViewHeight = 1080,
+	},
 
 	--
 	-- Plugins section
